clickfunction in img

--- a/src/app/firstpage/firstpage.component.html
+++ b/src/app/firstpage/firstpage.component.html
@@ -15,6 +15,7 @@
     >
       <img
         src="../../assets/logo.png"
+        (click)="redirectToChooseOne()"
         alt=""
         class="cursor-pointer flicker-animation"
       />
