creating joining component

--- a/src/app/createroom/createroom.component.html
+++ b/src/app/createroom/createroom.component.html
@@ -37,23 +37,7 @@
     </div>
 
     <div class="flex-grow flex flex-col justify-center items-center">
-      <h3 class="logo font-extrabold ml-[-5em] lg:text-2xl">Choose the Room</h3>
-      <div class="flex mt-3 space-x-3">
-        <button
-          type="submit"
-          (click)="goToJoinRoom()"
-          class="border-slate-700 border-2 bg-black text-white text-lg px-6 py-2 rounded-full cursor-pointer transition-all border-b-[4px] hover:brightness-110 hover:-translate-y-[1px] hover:border-b-[6px] active:border-b-[2px] active:brightness-90 active:translate-y-[2px]"
-        >
-          Join Room
-        </button>
-        <button
-          type="submit"
-          (click)="goToCreateRoom()"
-          class="border-slate-700 border-2 bg-black text-white text-lg px-6 py-2 rounded-full cursor-pointer transition-all border-b-[4px] hover:brightness-110 hover:-translate-y-[1px] hover:border-b-[6px] active:border-b-[2px] active:brightness-90 active:translate-y-[2px]"
-        >
-          Create Room
-        </button>
-      </div>
+      <h3 class="logo font-extrabold ml-[-5em] lg:text-2xl">Create the Room</h3>
     </div>
 
     <div class="h-16 bg-black bottom w-full fixed bottom-0"></div>
