--- a/src/app/joinroom/joinroom.component.html
+++ b/src/app/joinroom/joinroom.component.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="" />
   </head>
 
-  <body class="h-screen flex flex-col justify-between items-center">
-    <div class="h-16 bg-black top w-full fixed top-0">
+  <body class="flex flex-col items-center justify-between h-screen">
+    <div class="fixed top-0 w-full h-16 bg-black top">
       <div (click)="goBack()">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -36,11 +36,18 @@
       </div>
     </div>
 
-    <div class="flex-grow flex flex-col justify-center items-center">
-      <h3 class="logo font-extrabold ml-[-5em] lg:text-2xl">Join the Room</h3>
+    <div class="flex flex-col items-center justify-center flex-grow">
+      <h3 class="font-extrabold logo lg:text-2xl">Join the Room</h3>
+      <input
+        type="text"
+        pattern="[0-9]*"
+        inputmode="numeric"
+        placeholder="Room ID"
+        class="p-2 mt-4 font-bold border-2 border-gray-300 rounded-md"
+      />
     </div>
 
-    <div class="h-16 bg-black bottom w-full fixed bottom-0"></div>
+    <div class="fixed bottom-0 w-full h-16 bg-black bottom"></div>
 
     <script src="" async defer></script>
   </body>
