--- a/src/app/createroom/createroom.component.html
+++ b/src/app/createroom/createroom.component.html
@@ -39,35 +39,53 @@
     <div class="flex flex-col items-center justify-center flex-grow">
       <h3 class="font-extrabold logo lg:text-2xl">Create the Room</h3>
 
-      <div class="flex ml-3">
-        <input
-          type="text"
-          matInput
-          [(ngModel)]="randomValue"
-          readonly
-          inputmode="numeric"
-          placeholder="Room id"
-          class="p-2 mt-4 font-bold border-2 border-gray-300 rounded-md"
-        />
+      <div class="flex shadow-sm">
         <div
-          class="flex content-center justify-center w-10 h-10 p-2 mt-3 ml-3 bg-black circle"
+          class="relative rounded-lg w-64 overflow-hidden before:absolute before:w-12 before:h-12 before:content[''] before:right-0 before:bg-violet-500 before:rounded-full before:blur-lg after:absolute after:-z-10 after:w-20 after:h-20 after:content[''] after:bg-rose-300 after:right-12 after:top-3 after:rounded-full after:blur-lg"
+        >
+          <input
+            inputmode="numeric"
+            [(ngModel)]="randomValue"
+            placeholder="Room id"
+            readonly
+            class="relative bg-transparent ring-0 outline-none border-2 border-neutral-500 text-neutral-900 placeholder-violet-700 text-sm font-semibold rounded-lg focus:ring-violet-500 placeholder-opacity-60 focus:border-violet-500 block w-full p-2.5 checked:bg-emerald-500"
+            type="text"
+          />
+        </div>
+        <button
+          (click)="copyToClipboard()"
+          (focus)="showCopyMessageOnFocus()"
+          (blur)="hideCopyMessageOnBlur()"
+          class="flex items-center justify-center w-10 h-10 py-1 mt-[0.1em] text-white bg-black rounded-e-lg"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
             viewBox="0 0 24 24"
-            (click)="copyToClipboard()"
-            (focus)="showCopyMessageOnFocus()"
-            (blur)="hideCopyMessageOnBlur()"
-            class="cursor-pointer"
+            fill="none"
+            class="pointer-events-none"
           >
+            <rect width="24" height="24"></rect>
+            <rect
+              x="4"
+              y="8"
+              width="12"
+              height="12"
+              rx="1"
+              stroke="#ffffff"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></rect>
             <path
-              fill="white"
-              d="M19.53 8L14 2.47a.75.75 0 0 0-.53-.22H11A2.75 2.75 0 0 0 8.25 5v1.25H7A2.75 2.75 0 0 0 4.25 9v10A2.75 2.75 0 0 0 7 21.75h7A2.75 2.75 0 0 0 16.75 19v-1.25H17A2.75 2.75 0 0 0 19.75 15V8.5a.75.75 0 0 0-.22-.5m-5.28-3.19l2.94 2.94h-2.94Zm1 14.19A1.25 1.25 0 0 1 14 20.25H7A1.25 1.25 0 0 1 5.75 19V9A1.25 1.25 0 0 1 7 7.75h1.25V15A2.75 2.75 0 0 0 11 17.75h4.25ZM17 16.25h-6A1.25 1.25 0 0 1 9.75 15V5A1.25 1.25 0 0 1 11 3.75h1.75V8.5a.76.76 0 0 0 .75.75h4.75V15A1.25 1.25 0 0 1 17 16.25"
-            />
+              d="M8 6V5C8 4.44772 8.44772 4 9 4H19C19.5523 4 20 4.44772 20 5V15C20 15.5523 19.5523 16 19 16H18"
+              stroke="#ffffff"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-dasharray="2 2"
+            ></path>
           </svg>
-        </div>
+        </button>
       </div>
     </div>
 
